<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trier_les_t_ches"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary" />

    <RadioGroup
        android:id="@+id/rgOptionsTri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbTriNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tri_nom" />

        <RadioButton
            android:id="@+id/rbTriPriorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priorite" />

        <RadioButton
            android:id="@+id/rbTriDateCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_de_cr_ation" />

        <RadioButton
            android:id="@+id/rbTriAchevement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tri_achevement" />

        <RadioButton
            android:id="@+id/rbTriAlarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarme" />
    </RadioGroup>
</LinearLayout>