<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lpi.taches.MainActivity">
    <item
        android:id="@+id/action_tri"
        android:icon="@drawable/sort"
        android:title="@string/tri"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_vue"
        android:icon="@drawable/eye"
        android:title="@string/vue"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_partager"
        android:icon="@drawable/share"
        android:orderInCategory="100"
        android:title="@string/partager"
        app:showAsAction="ifRoom" />
    <item
    android:id="@+id/action_apropos"
    android:icon="@drawable/about"
    android:orderInCategory="200"
    android:title="@string/a_propos"
    app:showAsAction="ifRoom" />
</menu>