<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voir_les_t_ches"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary" />

    <RadioGroup
        android:id="@+id/rgVue"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rbVueToutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toutes" />

        <RadioButton
            android:id="@+id/rbVueIncompletes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incompl_tes" />

        <RadioButton
            android:id="@+id/rbVueCompletes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compl_tes" />
    </RadioGroup>
</LinearLayout>